gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: traefik # Ou le nom trouvé via 'get gatewayclasses'
  listeners:
  - name: web
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
