httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redis-ui-route
  namespace: danau
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /redis
    backendRefs:
    - name: redis-service-team-a # Le nom de ton service généré par Crossplane
      port: 6379
